[CI] Test github option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: test github option with username
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        ./pyproject_creator.sh test Test erase,github soft-r-evolution
+        grep "soft-r-evolution.*test.*badge" projects/test/README.md
