--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,28 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a set of commands using the runners shell
-    - name: test github option with username
+    - name: test no option
+      run: |
+        ./pyproject_creator.sh test Test
+
+    - name: test invalid parameters
+      run: |
+        ! ./pyproject_creator.sh
+        ! ./pyproject_creator.sh test
+
+    - name: test github option erase
+      run: |
+        ! ./pyproject_creator.sh test Test
+        ./pyproject_creator.sh test Test erase
+
+    - name: test github option with project space
       run: |
         ./pyproject_creator.sh test Test erase,github soft-r-evolution
         grep "soft-r-evolution.*test.*badge" projects/test/README.md
+
+    - name: test github option without project space
+      run: |
+        ./pyproject_creator.sh test Test erase,github
+        ! grep "badge" projects/test/README.md
+
+
